[feat] User Email 회원가입 기능 추가 중

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -1,1 +1,25 @@
+# pjt
 spring.application.name=ai-valley
+app.base-url=http://localhost:8080/
+
+# DataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/ai-valley?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=rally
+spring.datasource.password=rally1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.sql.init.mode=always
+
+# JavaMailSender
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wngud1225@gmail.com
+spring.mail.password=your-email-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
