--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # pjt
 spring.application.name=ai-valley
-app.base-url=http://localhost:8080/
+server.port=8080
 
 # DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/ai-valley?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
@@ -19,7 +19,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=wngud1225@gmail.com
-spring.mail.password=your-email-password
+spring.mail.password=ENC(pqmSgyGyt6hlrj78BwvFcPUuv6US6CH3oJZsAqYxQ4U=)
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+# Jasypt
+spring.config.import=optional:file:.env[.properties]
+jasypt.encryptor.password=${jasypt_encryptor_password}
