[feat] OpenAPI Swagger 기본적인 적용 및 테스트 완료

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 # Jasypt
 spring.config.import=optional:file:.env[.properties]
 jasypt.encryptor.password=${jasypt_encryptor_password}
+
+# Swagger
+#springdoc.api-docs.path=/api-docs
+#springdoc.swagger-ui.path=/swagger-ui.html
