--- a/be/build.gradle
+++ b/be/build.gradle
@@ -28,9 +28,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
 
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
 	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
 	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 
