--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -1,18 +1,12 @@
 # pjt
 spring.application.name=ai-valley
 server.port=8080
-
-# DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/ai-valley?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=rally
-spring.datasource.password=rally1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.profiles.active=dev
 
 # JPA
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.sql.init.mode=always
 
 # JavaMailSender
