--- a/be/src/main/resources/application-dev.properties
+++ b/be/src/main/resources/application-dev.properties
@@ -10,3 +10,7 @@ spring.datasource.password=
 
 # JPA
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#spring.sql.init.mode=always
