[feat] 임시 데이터 생성 및 POST 관련 AI 통신 및 DB 저장 테스트 완료

--- a/be/src/main/resources/application-dev.properties
+++ b/be/src/main/resources/application-dev.properties
@@ -4,13 +4,19 @@ spring.h2.console.path=/h2-console
 
 # H2 Database
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/test
+#spring.datasource.url=jdbc:h2:~/test
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
 # JPA
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
+# Data ???
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:db/mysql/data/insert_user.sql
+#spring.sql.init.data-locations=classpath:db/mysql/data/insert_user.sql,classpath:db/mysql/data/insert_board.sql,classpath:db/mysql/data/insert_clone.sql
