--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -19,3 +19,6 @@ jasypt.encryptor.password=${jasypt_encryptor_password}
 # Swagger
 #springdoc.api-docs.path=/api-docs
 #springdoc.swagger-ui.path=/swagger-ui.html
+
+# AI Server
+ai.server.url=http://localhost:8000
