[feat] 댓글 MVC 패턴 완성 및 User Profile 페이지용 통계 정보 추가 완성

--- a/be/src/main/resources/application-dev.properties
+++ b/be/src/main/resources/application-dev.properties
@@ -20,3 +20,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:db/mysql/data/insert_user.sql
 #spring.sql.init.data-locations=classpath:db/mysql/data/insert_user.sql,classpath:db/mysql/data/insert_board.sql,classpath:db/mysql/data/insert_clone.sql
+
+# Frontend Server
+cors.allowed-origins=http://localhost:5173,https://your-frontend-domain.com
