--- a/be/src/main/resources/application-dev.properties
+++ b/be/src/main/resources/application-dev.properties
@@ -18,7 +18,8 @@ spring.jpa.defer-datasource-initialization=true
 
 # Data ???
 spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:db/mysql/data/insert_user.sql
+#spring.sql.init.data-locations=classpath:db/mysql/data/insert_user.sql
+spring.sql.init.data-locations=classpath:db/mysql/data/insert_user.sql,classpath:db/mysql/data/insert_reply.sql
 #spring.sql.init.data-locations=classpath:db/mysql/data/insert_user.sql,classpath:db/mysql/data/insert_board.sql,classpath:db/mysql/data/insert_clone.sql
 
 # Frontend Server
