--- a/be/src/main/resources/application-dev.properties
+++ b/be/src/main/resources/application-dev.properties
@@ -16,7 +16,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 
-# Data ???
+# Data Insert
 spring.sql.init.mode=always
 #spring.sql.init.data-locations=classpath:db/mysql/data/insert_user.sql
 spring.sql.init.data-locations=classpath:db/mysql/data/insert_user.sql,classpath:db/mysql/data/insert_reply.sql
